<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp.200"
            android:paddingBottom="@dimen/dp.10">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/dp.80"
                android:layout_height="@dimen/dp.80"
                android:layout_gravity="bottom|center"
                android:background="@drawable/ic_login_header"
                android:paddingTop="@dimen/dp.40" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp.20"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_login_user"
                android:drawablePadding="@dimen/dp.15"
                android:hint="@string/login_input_user"
                android:inputType="number|phone"
                android:theme="@style/LoginEditText" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp.10"
                android:drawableStart="@drawable/ic_login_pwd"
                android:drawablePadding="@dimen/dp.15"
                android:hint="@string/login_input_password"
                android:inputType="textPassword"
                android:maxEms="1"
                android:theme="@style/LoginEditText" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/dp.10"
                android:text="@string/login_forget_password"
                android:textColor="@color/colorGray" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn_sm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp.40"
                android:background="@drawable/selector_login_btn"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp.20" />

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

